Fix BLs