@@ -3,10 +3,13 @@ plugins {
     id 'application'
 }
 
-application {
+tasks.withType(JavaExec).configureEach {
     File runningDir = new File(parent.projectDir.getPath(), 'run/')
-    runningDir.mkdirs()
-    tasks.run.workingDir = runningDir
+    doFirst {
+        runningDir.mkdirs()
+    }
+
+    workingDir = runningDir
     mainClassName = jar.manifest.attributes.get('Main-Class')
-    applicationDefaultJvmArgs += ['-Xms512M', '-Xmx2G', '-server', '-XX:+DisableExplicitGC', '-XX:+UseCompressedOops', '-XX:+OptimizeStringConcat', '-XX:-UseGCOverheadLimit', '-XX:+AlwaysPreTouch', '-XX:+UnlockExperimentalVMOptions', '-XX:+UnlockDiagnosticVMOptions', '-XX:+CrashOnOutOfMemoryError', '-XX:+HeapDumpOnOutOfMemoryError']
+    applicationDefaultJvmArgs += ['-Xms512M', '-Xmx2G', '-server', '-XX:CompileThreshold=500', '-XX:+DisableExplicitGC', '-XX:+UseCompressedOops', '-XX:+AggressiveOpts', '-XX:+UseStringDeduplication', '-XX:+OptimizeStringConcat', '-XX:-UseGCOverheadLimit', '-XX:+AlwaysPreTouch', '-XX:+UnlockExperimentalVMOptions', '-XX:+UnlockDiagnosticVMOptions', '-XX:+CrashOnOutOfMemoryError', '-XX:+HeapDumpOnOutOfMemoryError']
 }
